--- a/SimTECH/SimTECH/Pages/Season/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Standings.razor
@@ -62,8 +62,11 @@
             </MudTabPanel>
 
             <MudTabPanel Text="WDC results">
-                <MudPaper Elevation="15" Class="pa-4">
+                <MudPaper Elevation="15">
                     <MudTable Items="@DriverResultsModel">
+                        <ToolBarContent>
+                            <MudText Typo="Typo.h4">WDC results</MudText>
+                        </ToolBarContent>
                         <HeaderContent>
                             <MudTh>#</MudTh>
                             <MudTh>No</MudTh>
@@ -108,6 +111,9 @@
 
             <MudTabPanel Text="WCC results">
                 <MudTable Items="@TeamResultsModel">
+                    <ToolBarContent>
+                        <MudText Typo="Typo.h4">WCC results</MudText>
+                    </ToolBarContent>
                     <HeaderContent>
                         <MudTh>#</MudTh>
                         <MudTh>Team</MudTh>
