--- a/SimTECH/SimTECH/Pages/Factors/Strategies.razor
+++ b/SimTECH/SimTECH/Pages/Factors/Strategies.razor
@@ -7,7 +7,7 @@
 <MudContainer>
     <MudTabs>
         <MudTabPanel Text="Strategies">
-            <MudDataGrid T="Strategy" Items="@StrategyData" Bordered="true" Dense="true" Class="my-2">
+            <MudDataGrid T="Strategy" Items="@StrategyData" Bordered="true" Dense="true">
                 <ToolBarContent>
                     <MudText Typo="Typo.h4">Strategies</MudText>
                     <MudSpacer />
