--- a/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/RaceEditor.razor
@@ -4,22 +4,51 @@
     </TitleContent>
     <DialogContent>
         <MudForm Model="@Model">
-            <MudTextField @bind-Value="Model.Name" Label="Name" />
-            <MudSelect T="long" @bind-Value="Model.TrackId" Label="Track" ReadOnly="@(Model.Id != 0)">
-                @foreach (var select in Tracks)
-                {
-                    <MudSelectItem Value="select.Id">
-                        <CountryFlag Code="@select.Country" Size="FlagSize.Small" />
-                        @select.Name
-                    </MudSelectItem>
-                }
-            </MudSelect>
-            <MudSelect T="Weather" @bind-Value="Model.Weather" Label="Weather">
-                @foreach (var select in EnumHelper.GetWeatherSelection())
-                {
-                    <MudSelectItem Value="select.Key">@select.Value</MudSelectItem>
-                }
-            </MudSelect>
+            <MudGrid>
+                <MudItem xs="9">
+                    <MudStack>
+                        <MudTextField @bind-Value="Model.Name" Label="Name" Class="field-lg" />
+                        <MudSelect T="long" @bind-Value="Model.TrackId" Label="Track" ReadOnly="@(Model.Id != 0)">
+                            @foreach (var select in Tracks)
+                            {
+                                <MudSelectItem Value="select.Id">
+                                    <CountryFlag Code="@select.Country" Size="FlagSize.Small" />
+                                    @select.Name
+                                </MudSelectItem>
+                            }
+                        </MudSelect>
+                        <div>
+                            <MudText Typo="Typo.subtitle2">Weather</MudText>
+                            <MudChipSet @bind-SelectedChip="weatherChip">
+                                @foreach (var select in EnumHelper.GetWeatherSelection())
+                                {
+                                    <MudChip Value="@select.Key" Default="@(Model.Weather == select.Key)">@select.Value</MudChip>
+                                }
+                            </MudChipSet>
+                        </div>
+                        <MudSwitch @bind-Checked="variableRaceLength" Label="Set variable race length"></MudSwitch>
+                        @if (variableRaceLength)
+                        {
+                            <MudNumericField T="int" @bind-Value="Model.RaceLength" Step="10" Label="RaceLength" HelperText="Should round to nearest ten" Class="field-md" />
+                        }
+                    </MudStack>
+                </MudItem>
+
+                <MudItem xs="3">
+                    @if (errorValidations.Any())
+                    {
+                        <MudList>
+                            <MudListSubheader>Error messages</MudListSubheader>
+                            @foreach (var error in errorValidations)
+                            {
+                                <MudListItem>
+                                    <MudText Color="Color.Error">@error</MudText>
+                                </MudListItem>
+                            }
+                        </MudList>
+                    }
+                </MudItem>
+            </MudGrid>
         </MudForm>
     </DialogContent>
     <DialogActions>
@@ -33,8 +62,13 @@
 
     [Parameter] public Race? Race { get; set; }
     [Parameter] public List<Track> Tracks { get; set; } = new();
-    [Parameter] public long SeasonId { get; set; }
+    [Parameter] public int SeasonId { get; set; }
     [Parameter] public int IncomingRound { get; set; }
+    [Parameter] public int DefaultRaceLength { get; set; }
+
+    private MudChip? weatherChip;
+    private bool variableRaceLength { get; set; } = false;
+    private List<string> errorValidations = new();
 
     private EditRaceModel Model = new();
 
@@ -46,12 +80,16 @@
             {
                 Round = IncomingRound,
                 SeasonId = SeasonId,
+                RaceLength = DefaultRaceLength,
             };
         }
     }
 
     private void Submit()
     {
+        if (!RunValidations())
+            return;
+
         if (Model.IsDirty)
         {
             var modRace = Model.Record;
@@ -61,4 +99,17 @@
     }
 
     private void Cancel() => RaceDialog?.Cancel();
+
+    private bool RunValidations()
+    {
+        var isValid = true;
+
+        if ((Model.RaceLength % 10) != 0)
+        {
+            errorValidations.Add("Race length should be a factor of 10");
+            isValid = false;
+        }
+
+        return isValid;
+    }
 }
