--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -14,14 +14,15 @@
 <PageTitle>SimTECH</PageTitle>
 
 <MudLayout>
-    <MudAppBar Elevation="1" Dense="true">
+    <MudAppBar Elevation="5" Dense="true">
         <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Primary" Edge="Edge.Start" OnClick="ToggleSidebar" />
-        <MudText>> [Current league]</MudText>
+        <MudText>League: todo</MudText>
         <Breadcrumbs /> @* TODO: Use this implemented feature too *@
         <MudSpacer />
         <MudToggleIconButton @bind-Toggled="@_isDarkTheme"
             Icon="@Icons.Material.Filled.LightMode" Color="Color.Warning" Title="Light"
             ToggledIcon="@Icons.Material.Filled.DarkMode" ToggledColor="Color.Tertiary" ToggledTitle="Dark" />
+        
         <MudMenu AnchorOrigin="Origin.BottomRight" TransformOrigin="Origin.TopRight">
             <!-- HINT: Following menu is good for user settings -->
             <ActivatorContent>
