--- a/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
@@ -27,6 +27,10 @@
                                 <MudText Typo="Typo.subtitle1">Race settings</MudText>
                                 <MudDivider />
                                 <MudStack Row="true" Spacing="4">
+                                    <MudNumericField T="int" @bind-Value="model.Rng" Label="Pit Min. RNG" Class="field-md" />
+                                    <MudNumericField T="int" @bind-Value="model.PitMaximum" Label="Pit Max. RNG" Class="field-md" />
+                                </MudStack>
+                                <MudStack Row="true" Spacing="4">
                                     <MudNumericField T="int" @bind-Value="model.PitMinimum" Label="Pit Min. RNG" Class="field-md" />
                                     <MudNumericField T="int" @bind-Value="model.PitMaximum" Label="Pit Max. RNG" Class="field-md" />
                                 </MudStack>
