--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -1,6 +1,6 @@
 ﻿@page "/overview/{SeasonId:long}"
 @page "/overview/{SeasonId:long}/{TabIndex:int}"
-
+@inject LeagueService LeagueService
 @inject RaceService RaceService
 @inject SeasonService SeasonService
 @inject NavigationManager Nav
@@ -106,6 +106,8 @@
                         <MudText Typo="Typo.subtitle1">Subtitle</MudText>
                         <MudPaper Elevation="15" Class="pa-4">
                             <MudTextField @bind-Value="Season.GridBonus" Label="GridBonus" ReadOnly="true"></MudTextField>
+                            <MudTextField @bind-Value="Season.RngMinimum" Label="RngMinimum" ReadOnly="true"></MudTextField>
+                            <MudTextField @bind-Value="Season.RngMaximum" Label="RngMaximum" ReadOnly="true"></MudTextField>
                             <MudTextField @bind-Value="Season.PitMinimum" Label="PitMinimum" ReadOnly="true"></MudTextField>
                             <MudTextField @bind-Value="Season.PitMaximum" Label="PitMaximum" ReadOnly="true"></MudTextField>
                             <MudTextField @bind-Value="Season.PointsPole" Label="PointsPole" ReadOnly="true"></MudTextField>
@@ -230,7 +232,9 @@
 
     async Task UpdateSeason()
     {
-        var parameters = new DialogParameters { ["Season"] = Season, ["Copied"] = false };
+        // unless I see a reason to retrieve this for a reason elsewhere on this page
+        var leagues = await LeagueService.GetLeagues();
+        var parameters = new DialogParameters { ["Season"] = Season, ["Leagues"] = leagues, ["Copied"] = false };
 
         var dialog = await DialogService.ShowAsync<SeasonEditor>("Modify season", parameters);
         var result = await dialog.Result;
