--- a/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/TyreEditor.razor
@@ -7,10 +7,10 @@
     <DialogContent>
         <MudForm Model="@model">
             <MudTextField T="string" @bind-Value="model.Name" Label="Name" Class="field-md" />
-            <MudColorPicker @bind-Text="model.Colour" Label="Colour" Placeholder="Select colour" DisableAlpha="true" Class="field-sm" />
-            <MudNumericField T="int" @bind-Value="model.Length" Label="Length" Class="field-sm" />
-            <MudNumericField T="int" @bind-Value="model.Pace" Label="Pace" Class="field-sm" />
-            <MudStack Row="true" Spacing="4">
+            <MudColorPicker @bind-Text="model.Colour" Label="Colour" Placeholder="Select colour" DisableAlpha="true" Class="field-md" />
+            <MudNumericField T="int" @bind-Value="model.Length" Label="Length" Class="field-md" />
+            <MudNumericField T="int" @bind-Value="model.Pace" Label="Pace" Class="field-md" />
+            <MudStack Row="true" Justify="Justify.FlexStart" Spacing="4">
                 <MudNumericField T="int" @bind-Value="model.WearMax" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.DoubleArrow" AdornmentColor="Color.Warning" Label="WearMax" Class="field-sm" />
                 <MudNumericField T="int" @bind-Value="model.WearMin" Adornment="Adornment.End" AdornmentIcon="@Icons.Material.Filled.DoubleArrow" AdornmentColor="Color.Warning" Label="WearMin" Class="field-sm" />
             </MudStack>
