--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -47,7 +47,7 @@
                 @context.FullName
             </MudTd>
             <MudTd>@context.Number</MudTd>
-            <MudTd Style="@(ViewHelper.GetTeamSimpleStyle(context.Colour))">
+            <MudTd Style="@(ViewHelper.GetSimpleStyle(context.Colour))">
                 @context.TeamName
             </MudTd>
             <MudTd>@context.Power</MudTd>
