--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -35,6 +35,12 @@ html, body {
     width: 7px !important;
 }
 
+.number-col {
+    width: 30px;
+    padding: 10px;
+    text-align: center;
+}
+
 .field-sm {
     width: 100px;
 }
