--- a/SimTECH/SimTECH/Pages/_Host.cshtml
+++ b/SimTECH/SimTECH/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <link href="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.css" rel="stylesheet" />
 
     <script src="https://kit.fontawesome.com/d60725a0b3.js" crossorigin="anonymous"></script>
 
@@ -35,5 +36,6 @@
 
     <script src="_framework/blazor.server.js"></script>
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/CodeBeam.MudBlazor.Extensions/MudExtensions.min.js"></script>
 </body>
 </html>
