--- a/SimTECH/SimTECH/_Imports.razor
+++ b/SimTECH/SimTECH/_Imports.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using MudBlazor
+@using MudExtensions
 @using SimTECH
 @using SimTECH.Components
 @using SimTECH.Data.EditModels
